force-app/main/default/objects/Krow__Project_Billing__c/Krow__Project_Billing__c.object-meta.xml
<CustomObject>
    <label>Project Billing</label>
    <nameField>
        <displayFormat>PB{0}</displayFormat>
        <label>Project Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>