force-app/main/default/objects/Krow__Project_Billing__c/fields/Krow__Bill_On_Overage__c.field-meta.xml
<CustomField>
    <fullName>Krow__Bill_On_Overage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill On Overage</label>
    <type>Checkbox</type>
</CustomField>