force-app/main/default/objects/Krow__Project_Billing__c/fields/Krow__Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billing_Method__c</fullName>
    <formula>IF(NOT(ISNULL(Krow__Project__r.Krow__Billing_Type__c)), TEXT(Krow__Project__r.Krow__Billing_Type__r.Krow__Billing_Method__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Method</label>
    <type>Text</type>
</CustomField>