force-app/main/default/objects/Krow__Project_Billing__c/fields/Krow__Excess_Rate__c.field-meta.xml
<CustomField>
    <fullName>Krow__Excess_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Excess Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>