force-app/main/default/objects/Krow__Project_Billing__c/fields/Krow__Overage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Overage_Amount__c</fullName>
    <label>Overage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>