force-app/main/default/objects/Krow__Project_Billing__c/fields/Krow__Recurring_Period__c.field-meta.xml
<CustomField>
    <fullName>Krow__Recurring_Period__c</fullName>
    <label>Recurring Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>