force-app/main/default/objects/Krow__Project_Billing__c/fields/Krow__Total_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable_Hours__c</fullName>
    <label>Total Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>